# vulkanrs

./: .gitignore  Cargo.toml  README.md  build.rs  rust-toolchain.toml  rustfmt.toml
reference/: main.rs
shaders/: triangle.frag.glsl  triangle.vert.glsl
src/: main.rs  window.rs
