[package]
name = "vulkanrs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
log = "0.4.27"
pretty_env_logger = "0.5.0"
thiserror = "2.0.12"
vulkanalia = { version = "=0.29.0", features = ["libloading", "provisional", "window"] }
winit = "0.29.15"

[build-dependencies]
shaderc = "0.9.1"